--- a/RadarClient/RadarClient.vcxproj
+++ b/RadarClient/RadarClient.vcxproj
@@ -183,6 +183,7 @@ xcopy /y "$(SolutionDir)FreeImage\*.dll" "$(OutDir)"</Command>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="CMinimap.cpp" />
     <ClCompile Include="CRCPoint.cpp" />
     <ClCompile Include="CRCSocket.cpp" />
     <ClCompile Include="CUserInterface.cpp" />
@@ -196,6 +197,7 @@ xcopy /y "$(SolutionDir)FreeImage\*.dll" "$(OutDir)"</Command>
     <ClCompile Include="ViewPortControl.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="CMinimap.h" />
     <ClInclude Include="CRCPoint.h" />
     <ClInclude Include="CRCSocket.h" />
     <ClInclude Include="CUserInterface.h" />
@@ -210,6 +212,8 @@ xcopy /y "$(SolutionDir)FreeImage\*.dll" "$(OutDir)"</Command>
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram.cd" />
+    <None Include="GLSL\Minimap.f.glsl" />
+    <None Include="GLSL\Minimap.v.glsl" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
