--- a/RadarClient/RadarClient.vcxproj.filters
+++ b/RadarClient/RadarClient.vcxproj.filters
@@ -95,6 +95,9 @@
     <ClInclude Include="CMinimapPointer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram.cd" />
@@ -104,5 +107,15 @@
     <None Include="GLSL\CRCPoint.v.glsl" />
     <None Include="GLSL\MiniMapPointer.v.glsl" />
     <None Include="GLSL\MiniMapPointer.f.glsl" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="RadarClient.rc">
+      <Filter>Resource Files</Filter>
+    </ResourceCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="..\Data\radar.png">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
 </Project>
