--- a/.gitignore
+++ b/.gitignore
@@ -165,9 +165,10 @@ AppPackages/
 # Others
 ClientBin/
 [Ss]tyle[Cc]op.*
-~$*
-*~
+#~$*
+#*~
 *.dbmdl
+*.opendb
 *.dbproj.schemaview
 *.pfx
 *.publishsettings
