--- a/RadarClient/RadarClient.vcxproj.filters
+++ b/RadarClient/RadarClient.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClCompile Include="CMinimapPointer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="BabyGrid.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CMesh.h">
@@ -96,6 +99,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="BabyGrid.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
