--- a/RadarClient/RadarClient.vcxproj.filters
+++ b/RadarClient/RadarClient.vcxproj.filters
@@ -54,9 +54,6 @@
     <ClCompile Include="CMinimapPointer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="BabyGrid.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CMesh.h">
@@ -101,7 +98,7 @@
     <ClInclude Include="resource.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="BabyGrid.h">
+    <ClInclude Include="ZeeGrid.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
