--- a/RadarClient/RadarClient.vcxproj
+++ b/RadarClient/RadarClient.vcxproj
@@ -189,7 +189,6 @@ xcopy /y "$(SolutionDir)FreeImage\*.dll" "$(OutDir)"</Command>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="BabyGrid.cpp" />
     <ClCompile Include="CMinimap.cpp" />
     <ClCompile Include="CMinimapPointer.cpp" />
     <ClCompile Include="CRCPoint.cpp" />
@@ -205,7 +204,6 @@ xcopy /y "$(SolutionDir)FreeImage\*.dll" "$(OutDir)"</Command>
     <ClCompile Include="ViewPortControl.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="BabyGrid.h" />
     <ClInclude Include="CMinimap.h" />
     <ClInclude Include="CMinimapPointer.h" />
     <ClInclude Include="CRCPoint.h" />
@@ -220,6 +218,7 @@ xcopy /y "$(SolutionDir)FreeImage\*.dll" "$(OutDir)"</Command>
     <ClInclude Include="ShaderUtils.h" />
     <ClInclude Include="Util.h" />
     <ClInclude Include="ViewPortControl.h" />
+    <ClInclude Include="ZeeGrid.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram.cd" />
