selection in table

--- a/RadarClient/RadarClient.vcxproj
+++ b/RadarClient/RadarClient.vcxproj
@@ -268,6 +268,9 @@ xcopy /y "$(SolutionDir)FreeImage\*.dll" "$(OutDir)"</Command>
     <Library Include="..\glew\lib\Release\Win32\glew32.lib" />
     <Library Include="..\glew\lib\Release\Win32\glew32s.lib" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="..\Data\settings.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
