--- a/RadarClient/RadarClient.vcxproj
+++ b/RadarClient/RadarClient.vcxproj
@@ -88,7 +88,7 @@
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
-      <PrecompiledHeader>NotUsing</PrecompiledHeader>
+      <PrecompiledHeader>Create</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>_ITERATOR_DEBUG_LEVEL=2;_CRT_SECURE_NO_WARNINGS;WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
@@ -220,11 +220,12 @@ xcopy /y "$(SolutionDir)FreeImage\*.dll" "$(OutDir)"</Command>
     <ClCompile Include="CTrack.cpp" />
     <ClCompile Include="CUserInterface.cpp" />
     <ClCompile Include="RadarClient.cpp" />
-    <ClCompile Include="C3DObject.cpp" />
+    <ClCompile Include="C3DObjectModel.cpp" />
     <ClCompile Include="CCamera.cpp" />
     <ClCompile Include="CMesh.cpp" />
     <ClCompile Include="CScene.cpp" />
     <ClCompile Include="ShaderUtils.cpp" />
+    <ClCompile Include="stdafx.cpp" />
     <ClCompile Include="Util.cpp" />
     <ClCompile Include="CViewPortControl.cpp" />
   </ItemGroup>
@@ -249,7 +250,7 @@ xcopy /y "$(SolutionDir)FreeImage\*.dll" "$(OutDir)"</Command>
     <ClInclude Include="CTrack.h" />
     <ClInclude Include="CUserInterface.h" />
     <ClInclude Include="RadarClient.h" />
-    <ClInclude Include="C3DObject.h" />
+    <ClInclude Include="C3DObjectModel.h" />
     <ClInclude Include="CCamera.h" />
     <ClInclude Include="CMesh.h" />
     <ClInclude Include="CScene.h" />
