replaced NULL -> nullptr where possible, added macro for logging

--- a/RadarClient/RadarClient.vcxproj.filters
+++ b/RadarClient/RadarClient.vcxproj.filters
@@ -195,7 +195,7 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="CRCLogger.h">
-      <Filter>Source Files</Filter>
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
