--- a/RadarClient/RadarClient.vcxproj
+++ b/RadarClient/RadarClient.vcxproj
@@ -101,6 +101,7 @@
       <BrowseInformation>true</BrowseInformation>
       <ShowIncludes>false</ShowIncludes>
       <StructMemberAlignment>8Bytes</StructMemberAlignment>
+      <PreprocessToFile>false</PreprocessToFile>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -110,15 +111,15 @@
       <TargetMachine>MachineX86</TargetMachine>
     </Link>
     <PostBuildEvent>
-      <Command>echo n | xcopy /-y "$(SolutionDir)freeglut\bin\*.dll" "$(OutDir)"
-echo n | xcopy /-y "$(SolutionDir)glew\bin\Release\Win32\*.dll" "$(OutDir)"
-echo n | xcopy /-y "$(ProjectDir)GLSL\*.glsl" "$(OutDir)"
-echo n | xcopy /-y "$(ProjectDir)GLSL\*.vert" "$(OutDir)"
-echo n | xcopy /-y "$(ProjectDir)GLSL\*.frag" "$(OutDir)"
-echo n | xcopy /-y "$(SolutionDir)Data\*.*" "$(OutDir)"
-echo n | xcopy /-y "$(SolutionDir)Data\AltitudeData\*.*" "$(OutDir)AltitudeData\"
-echo n | xcopy /-y "$(SolutionDir)Data\TextureData\*.*" "$(OutDir)TextureData\"
-echo n | xcopy /-y "$(SolutionDir)FreeImage\*.dll" "$(OutDir)"</Command>
+      <Command>xcopy "$(SolutionDir)freeglut\bin\*.dll" "$(OutDir)" /s /d
+xcopy "$(SolutionDir)glew\bin\Release\Win32\*.dll" "$(OutDir)" /s /d
+xcopy "$(ProjectDir)GLSL\*.glsl" "$(OutDir)" /s /d
+xcopy "$(ProjectDir)GLSL\*.vert" "$(OutDir)" /s /d
+xcopy "$(ProjectDir)GLSL\*.frag" "$(OutDir)" /s /d
+xcopy "$(SolutionDir)Data\*.*" "$(OutDir)" /s /d
+xcopy "$(SolutionDir)Data\AltitudeData\*.*" "$(OutDir)AltitudeData\" /s /d
+xcopy "$(SolutionDir)Data\TextureData\*.*" "$(OutDir)TextureData\" /s /d
+xcopy "$(SolutionDir)FreeImage\*.dll" "$(OutDir)" /s /d</Command>
     </PostBuildEvent>
     <Bscmake>
       <PreserveSbr>true</PreserveSbr>
@@ -160,6 +161,7 @@ echo n | xcopy /-y "$(SolutionDir)FreeImage\*.dll" "$(OutDir)"</Command>
       <BrowseInformation>true</BrowseInformation>
       <ShowIncludes>false</ShowIncludes>
       <StructMemberAlignment>8Bytes</StructMemberAlignment>
+      <PreprocessToFile>false</PreprocessToFile>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -170,15 +172,15 @@ echo n | xcopy /-y "$(SolutionDir)FreeImage\*.dll" "$(OutDir)"</Command>
       <AdditionalDependencies>FreeImage.lib;freeglut.lib;glew32.lib;legacy_stdio_definitions.lib;Ws2_32.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>echo n | xcopy /-y "$(SolutionDir)freeglut\bin\*.dll" "$(OutDir)"
-echo n | xcopy /-y "$(SolutionDir)glew\bin\Release\Win32\*.dll" "$(OutDir)"
-echo n | xcopy /-y "$(ProjectDir)GLSL\*.glsl" "$(OutDir)"
-echo n | xcopy /-y "$(ProjectDir)GLSL\*.vert" "$(OutDir)"
-echo n | xcopy /-y "$(ProjectDir)GLSL\*.frag" "$(OutDir)"
-echo n | xcopy /-y "$(SolutionDir)Data\*.*" "$(OutDir)"
-echo n | xcopy /-y "$(SolutionDir)Data\AltitudeData\*.*" "$(OutDir)AltitudeData\"
-echo n | xcopy /-y "$(SolutionDir)Data\TextureData\*.*" "$(OutDir)TextureData\"
-echo n | xcopy /-y "$(SolutionDir)FreeImage\*.dll" "$(OutDir)"</Command>
+      <Command>xcopy "$(SolutionDir)freeglut\bin\*.dll" "$(OutDir)" /s /d
+xcopy "$(SolutionDir)glew\bin\Release\Win32\*.dll" "$(OutDir)" /s /d
+xcopy "$(ProjectDir)GLSL\*.glsl" "$(OutDir)" /s /d
+xcopy "$(ProjectDir)GLSL\*.vert" "$(OutDir)" /s /d
+xcopy "$(ProjectDir)GLSL\*.frag" "$(OutDir)" /s /d
+xcopy "$(SolutionDir)Data\*.*" "$(OutDir)" /s /d
+xcopy "$(SolutionDir)Data\AltitudeData\*.*" "$(OutDir)AltitudeData\" /s /d
+xcopy "$(SolutionDir)Data\TextureData\*.*" "$(OutDir)TextureData\" /s /d
+xcopy "$(SolutionDir)FreeImage\*.dll" "$(OutDir)" /s /d</Command>
     </PostBuildEvent>
     <Bscmake>
       <PreserveSbr>true</PreserveSbr>
